# cask_engine

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
include/cask/: abi.h  world.hpp
plugins/cubes/: cubes_plugin.cpp
plugins/cubes/glad/include/glad/: glad.h
plugins/cubes/glad/src/: glad.c
spec/: engine_spec.cpp  manifest_spec.cpp  plugin_spec.cpp  world_spec.cpp
spec/abi/: manifest_spec.cpp  plugin_spec.cpp
spec/engine/: engine_spec.cpp
spec/plugin/: loader_spec.cpp  registry_spec.cpp
spec/plugin/fixtures/: minimal_plugin.cpp  timing_plugin.cpp
spec/world/: abi_spec.cpp  initialize_plugins_spec.cpp  world_spec.cpp
src/: engine.hpp  main.cpp  world.hpp
src/cask/engine/: engine.cpp  engine.hpp
src/cask/plugin/: loader.hpp  registry.hpp
src/cask/world/: abi.cpp  abi_internal.hpp  world.hpp
